<resources>
    <string name="app_name">flight-db</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="airlines">airlines</string>
    <string name="autorization">authorization</string>
    <string name="currentLogin">login_now</string>
    <string name="loginField">login</string>
    <string name="ok">Ок!</string>
    <string name="topAirlines">Топ 10 Авиакомпаний</string>
    <string name="change">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="changeData">Изменение данных</string>
    <string name="enrty">Войти</string>
    <string name="incorrectData">Данные не верны</string>
    <string name="logIn">Авторизуйтесь</string>
    <string name="send">Отправить</string>
    <string name="newReview">Новый отзыв</string>
    <string name="noSuchFlights">No such flights</string>
    <string name="noSuchCity">No such city</string>
    <string name="buyTicket">Купить билет на этот рейс?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="tagReview">review</string>
    <string name="noTickets">You have no tickets</string>
    <string name="tagChange">change</string>
    <string name="successAdd">Successful adding</string>
    <string name="anotherLogin">Придумайте другой логин</string>
    <string name="welcome">Welcome to flight_db</string>
    <string name="entrance">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="start_trip">start trip</string>
    <string name="airlinesTop">Топ авикомпаний</string>
    <string name="lk">Личный кабинет</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="search_flights">Поиск рейсов</string>
    <string name="from">Откуда:</string>
    <string name="city">Город</string>
    <string name="to">Куда:</string>
    <string name="date">Дата:</string>
    <string name="hint_date">2020-05-31</string>
    <string name="search">Найти!</string>
    <string name="your_lk">Ваш личный кабинет</string>
    <string name="my_tickets">Мои билеты</string>
    <string name="addReview">Оставить отзыв</string>
    <string name="change_data">Изменить данные</string>
    <string name="airline">Авиакомпания</string>
    <string name="mark">Оценка (max 10)</string>
    <string name="hint_name">ФИО</string>
    <string name="hint_document">Серия и номер паспорта</string>
    <string name="man">Мужской</string>
    <string name="hint_email">email</string>
    <string name="woman">Женский</string>
    <string name="gender">Ваш пол:</string>
    <string name="endRegistration">Зарегистрироваться</string>
</resources>
