<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/search_flights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/search_flights"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_flights"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/city_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/city_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/city_from"
            android:ems="5"
            android:hint="@string/city"
            android:textSize="10sp"
            android:layout_alignParentTop="true"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/city_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/city_from_text"
            />

        <EditText
            android:id="@+id/city_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/city"
            android:textSize="10sp"
            android:inputType="textPersonName"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/city_to"/>

        <TextView
            android:id="@+id/date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:layout_toRightOf="@+id/city_to_text"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/date_from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/hint_date"
            android:inputType="textPersonName"
            android:layout_toRightOf="@+id/date_from"
            android:textSize="10dp"
            android:layout_alignParentTop="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/start_searching"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_design"
        android:text="@string/search"
        android:textSize="10dp"
        android:onClick="toSearch"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comments" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flights_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_searching"
        android:layout_marginBottom="5dp"
        app:layout_constraintVertical_bias="0.01" />


</androidx.constraintlayout.widget.ConstraintLayout>