<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_lk"
        android:textSize="20dp"
        android:id="@+id/lk_label"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="15dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/full_name"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/lk_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="5dp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/human_document"
        android:text=""
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:text=""
        android:textSize="10dp"
        app:layout_constraintLeft_toRightOf="@+id/human_document"
        app:layout_constraintTop_toBottomOf="@+id/full_name"
        android:padding="10dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mail"
        android:text=""
        android:textSize="10dp"
        app:layout_constraintTop_toBottomOf="@+id/human_document"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="20dp" />

    <Button
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="@string/my_tickets"
        android:onClick="onClick"
        android:id="@+id/mytickets"
        android:background="@drawable/button_design"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:background="@drawable/button_design"
        android:id="@+id/newReview"
        android:text="@string/addReview"
        android:onClick="onClick"
        app:layout_constraintLeft_toRightOf="@+id/mytickets"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@drawable/button_design"
        android:id="@+id/change"
        android:text="@string/change_data"
        android:onClick="onClick"
        app:layout_constraintLeft_toRightOf="@+id/full_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginRight="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/tickets_list"
        app:layout_constraintTop_toBottomOf="@+id/mytickets"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:padding="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>